<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_interface</name>
  <version>0.1.0</version>
  <description>
    Interfaz gráfica de taller (PyQt5) para operar el OpenMANIPULATOR-X real:
    control articular con sliders circulares (en vivo y con previsualización en
    RViz), jog cartesiano X/Y/Z + gripper, y modo teach para grabar y reproducir
    waypoints. Habla con el robot a través de un nodo puente propio (Dynamixel SDK).
  </description>
  <maintainer email="smorales@utec.edu.pe">Sergio Morales</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
