<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_master_slave</name>
  <version>0.1.0</version>
  <description>
    Aplicación maestro-esclavo (leader-follower) para dos OpenMANIPULATOR-X:
    el maestro se mueve libremente a mano (torque OFF) y el esclavo replica sus
    movimientos en tiempo real. Reescritura para ROS 2 Humble de la app de
    ROBOTIS, apoyada en open_manipulator_x_interface (Dynamixel SDK).
  </description>
  <maintainer email="smorales@utec.edu.pe">Sergio Morales</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>open_manipulator_x_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
